--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,13 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/one.css">
+  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/Style.css">
+  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/bootstrap.css">
+
+
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -39,5 +46,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script type="text/javascript" src="js/jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript" src="js/jquery-3.6.0.min.js"></script>
+      <script type="text/javascript" src="js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
